--- a/GFL/changelog.html
+++ b/GFL/changelog.html
@@ -30,8 +30,8 @@
             <section id="main_content">
                 <details>
                     <summary>March 20, 2023</summary>
-                    <p>Added 3 cards.</p>
-                    <p>Updated 2 cards.</p>
+                    Added 3 cards.
+                    Updated 2 cards.
                 </details>
             </section>
         </div>
