--- a/GFL/changelog.html
+++ b/GFL/changelog.html
@@ -29,8 +29,13 @@
         <div class="container">
             <section id="main_content">
                 <details>
+                    <summary>March 23, 2023</summary>
+                    Added 1 card.<br>
+                    Updated 1 card.
+                </details>
+                <details>
                     <summary>March 20, 2023</summary>
-                    Added 3 cards.
+                    Added 3 cards.<br>
                     Updated 2 cards.
                 </details>
             </section>
