--- a/GFL/index.html
+++ b/GFL/index.html
@@ -63,9 +63,10 @@
                     </tr>
                     <tr>
                         <td><a href="./mainpage">Topics Repository</a></td>
+                        <!--td><a href="./calc">Calculators</a></td-->
                         <td><a href="./changelog">Change Logs</a></td>
-                        <!-- glossary -->
                     </tr>
+                    <!-- glossary -->
                 </table>
 
                 <div id="event"></div>
