--- a/GFL/changelog.html
+++ b/GFL/changelog.html
@@ -29,7 +29,7 @@
         <div class="container">
             <section id="main_content">
                 <details>
-                    <summary>March 23, 2023</summary>
+                    <summary></summary>
                     Added 1 card.<br>
                     Updated 1 card.
                 </details>
