--- a/GFL/changelog.html
+++ b/GFL/changelog.html
@@ -29,9 +29,9 @@
         <div class="container">
             <section id="main_content">
                 <details>
-                    <summary></summary>
-                    Added 1 card.<br>
-                    Updated 1 card.
+                    <summary>March 28, 2023</summary>
+                    Added 2 cards.<br>
+                    Updated 8 cards.
                 </details>
                 <details>
                     <summary>March 20, 2023</summary>
