--- a/GFL/changelog.html
+++ b/GFL/changelog.html
@@ -29,6 +29,11 @@
         <div class="container">
             <section id="main_content">
                 <details>
+                    <summary>April 05, 2023</summary>
+                    Added ID 00424.<br>
+                    Updated IDs 00279, 00024, 00260.
+                </details>
+                <details>
                     <summary>March 28, 2023</summary>
                     Added 2 cards.<br>
                     Updated 8 cards.
