--- a/GFL/index.html
+++ b/GFL/index.html
@@ -22,9 +22,9 @@
                 "https://pbs.twimg.com/media/FrUwVIhaUAAfUgl?format=jpg&name=large", {onEnd: nextUnit});
 
             const nextBanner = timer.bind(null, document.getElementById('skin-banner'), "",
-                "https://iopwiki.com/images/3/37/Wonderful_Dating_Guide_Login_Wallpaper.png");
-            timer(document.getElementById('skin-banner'), "Apr 10, 2023 23:59 UTC-0800",
-            "https://iopwiki.com/images/f/fb/Farthest_Distance_Login_Wallpaper.png", {onEnd: nextBanner});
+                "");
+            timer(document.getElementById('skin-banner'), "May 01, 2023 23:59 UTC-0800",
+            "https://iopwiki.com/images/3/37/Wonderful_Dating_Guide_Login_Wallpaper.png", {onEnd: nextBanner});
 
             //timer(document.getElementById('mini-event'), 'Mar 13, 2023 23:59 UTC-0800',
             //    'https://preview.redd.it/ryq3i7bn5bia1.jpg?width=1000&format=pjpg&auto=webp&v=enabled&s=ef3584e697e15777310060145378d8d28f78eae4');
@@ -67,6 +67,7 @@
                         <td><a href="./changelog">Change Logs</a></td>
                     </tr>
                     <!-- glossary -->
+                    <!-- acquisition index -->
                 </table>
 
                 <div id="event"></div>
