--- a/GFL/index.html
+++ b/GFL/index.html
@@ -5,16 +5,15 @@
         <script type="module">
             import {timer} from '/univasset/scripts/htmlgenerator/htmlgenerator.js';
 
+            const nextEvent = timer.bind(null, document.getElementById('event'), "May 22, 2023 23:59 UTC-0800",
+                "https://preview.redd.it/qiyu4iokrkta1.jpg?width=1200&format=pjpg&auto=webp&v=enabled&s=30341a60a2e9a95d049dac9252829efb2916be8e");
             timer(document.getElementById('event'), "Apr 17, 2023 23:59 UTC-0800",
                 "./6kxmjz1cafqa1.jpg");
 
-            const nextPass = timer.bind(null, document.getElementById('battlepass'), "",
-                "");
+            const nextPass = timer.bind(null, document.getElementById('battlepass'), "May 28, 2023 23:59 UTC-0800",
+                "C-93");
             timer(document.getElementById('battlepass'), "Apr 23, 2023 23:59 UTC-0800",
-            "https://pbs.twimg.com/media/FrPXbbwagAMxVqt?format=jpg&name=large", {onEnd: nextPass});
-
-            //timer(document.getElementById("anchor"), "Mar 22, 2023 23:59 UTC-0800",
-            //    "https://pbs.twimg.com/media/Frof_t8acAAW-rI?format=jpg&name=large")
+                "https://pbs.twimg.com/media/FrPXbbwagAMxVqt?format=jpg&name=large", {onEnd: nextPass});
             
             const nextUnit = timer.bind(null, document.getElementById("coalition"), "May 01, 2023, 23:59 UTC-0800",
                 "https://preview.redd.it/jajjlqo4cvq81.jpg?width=1400&format=pjpg&auto=webp&v=enabled&s=a2f9a3e65cad03508714bb81aa834ad16f87b843")
@@ -24,10 +23,10 @@
             const nextBanner = timer.bind(null, document.getElementById('skin-banner'), "",
                 "");
             timer(document.getElementById('skin-banner'), "May 01, 2023 23:59 UTC-0800",
-            "https://iopwiki.com/images/3/37/Wonderful_Dating_Guide_Login_Wallpaper.png", {onEnd: nextBanner});
+                "https://iopwiki.com/images/3/37/Wonderful_Dating_Guide_Login_Wallpaper.png", {onEnd: nextBanner});
 
-            //timer(document.getElementById('mini-event'), 'Mar 13, 2023 23:59 UTC-0800',
-            //    'https://preview.redd.it/ryq3i7bn5bia1.jpg?width=1000&format=pjpg&auto=webp&v=enabled&s=ef3584e697e15777310060145378d8d28f78eae4');
+            //timer(document.getElementById('mini-event'), "",
+            //    "");
         </script>
         
         <meta charset='utf-8'>
@@ -72,7 +71,6 @@
 
                 <div id="event"></div>
                 <div id="battlepass"></div>
-                <div id="anchor"></div>
                 <div id="coalition"></div>
                 <div id="skin-banner"></div>
                 <div id="mini-event"></div>
