--- a/GFL/changelog.html
+++ b/GFL/changelog.html
@@ -29,6 +29,12 @@
         <div class="container">
             <section id="main_content">
                 <details>
+                    <summary>April 19, 2023</summary>
+                    Added IDs 00425, 00426, 00427.<br>
+                    Updated IDs 00015, 00053, 00028.<br>
+                    Battlepass tag changed to FrontlineProtocol.
+                </details>
+                <details>
                     <summary>April 05, 2023</summary>
                     Added ID 00424.<br>
                     Updated IDs 00279, 00024, 00260.
