--- a/PNC/unitstats.html
+++ b/PNC/unitstats.html
@@ -60,9 +60,17 @@
 
         <div class="container">
             <section id="main_content">
-                <div></div>
-                <p>All units at Lv.70 and 5★.</p>
-                <p>Data taken from <a href="https://nalu.wiki/neuralcloud/c/dolls">nalu.wiki Neural Cloud</a>.</p>
+                <div id="button">
+                    
+                </div>
+                <div id="stats">
+                    <div></div>
+                    <p>All units at Lv.70 and 5★.</p>
+                    <p>Data taken from <a href="https://nalu.wiki/neuralcloud/c/dolls">nalu.wiki Neural Cloud</a>.</p>
+                </div>
+                <div id="data">
+
+                </div>
             </section>
         </div>
     </body>
