--- a/GFL/changelog.html
+++ b/GFL/changelog.html
@@ -29,6 +29,10 @@
         <div class="container">
             <section id="main_content">
                 <details>
+                    <summary></summary>
+                    Added IDs 00428, 00429.
+                </details>
+                <details>
                     <summary>April 19, 2023</summary>
                     Added IDs 00425, 00426, 00427.<br>
                     Updated IDs 00015, 00053, 00028.<br>
