--- a/GFL/starter.html
+++ b/GFL/starter.html
@@ -36,10 +36,22 @@
             <section id="main_content">
                 <a href="#starting" id="starting"><h1>How worth is it to start this game now given how long it's been out?</h1></a>
                 <p><em>The best time to plant a tree was twenty years ago. The second best time is now.</em></p>
-                <p>In terms of catching up, there are in-game facilities called Forward Basecamp that gives a bevy of items for raising Tactical Dolls, your main fighting force, and Protocol Assimilation for steamrolling early to mid-game content. There's also Newbie Career Quests that gives free preleveled units where some of them, namely AR Team, are meta viable.</p>
-                <p>For contents, the only permanently missable ones are mainly minigame cosmetics only. Major events? Campaign Missions. Banner units? None here. Collabs? Reruns are possible (Note: they're not gamebreaking).</p>
-                <p>With stamina, there is no stamina. But it has an equivalent in Manpower, Ammunition, Ration, and Part resources which can be gathered in bulk indefinitely.</p>
-                <p>As for storage size, Android ahould be around 5-6GB, iOS is around 10GB.</p>
+                <dl>
+                    <dt>Catching up</dt>
+                    <dd>In-game facilities called Forward Basecamp that gives a bevy of items for raising Tactical Dolls (your main fighting force).</dd>
+                    <dd>Protocol Assimilation for steamrolling early to mid-game content.</dd>
+                    <dd>Newbie Career Quests that gives free preleveled units where some of them, namely AR Team, are meta viable.</dd>
+
+                    <dt>Contents</dt>
+                    <dd>The only permanently missable ones are mainly minigame cosmetics only.</dd>
+                    <dd>Major events? Campaign Missions. Banner units? None here. Collabs? Reruns are possible (Note: they're not gamebreaking).</dd>
+
+                    <dt>Stamina</dt>
+                    <dd>There is no stamina. But it has an equivalent in Manpower, Ammunition, Ration, and Part resources which can be gathered in bulk indefinitely.</dd>
+
+                    <dt>Storage</dt>
+                    <dd>Android ahould be around 5-6GB, iOS is around 10GB.</dd>
+                </dl>
 
                 <a href="#pvp" id="pvp"><h1>Is there PVP in this game?</h1></a>
                 <p>There are two kinds of PVP in this game, the highscore leaderboards type (Theater and Event Ranking Maps) and direct (Luffberry Chess).</p>
@@ -139,7 +151,7 @@
                     <li>2 ARSMG for general content (Common first team is M4A1, ST AR-15, M4 SOPMOD II, UMP45, Skorpion), 2 RFHG for late-game, and 1 MGSG for specialized enemies</li>
                     <li>8 echelons, where 4 are in permanent logistics</li>
                     <li>Forward Basecamp for passive CR and core income</li>
-                    <li>3-4 dorms for battery generation</li>
+                    <li>3-4 additional dorms for battery generation</li>
                     <li>Intelligence Center for generating chips which will be the bottleneck for fully maxed HOCS</li>
                     <li>Protocol Control Centre for the newbie-friendly units</li>
                 </ul>
