--- a/GFL/changelog.html
+++ b/GFL/changelog.html
@@ -29,7 +29,7 @@
         <div class="container">
             <section id="main_content">
                 <details>
-                    <summary></summary>
+                    <summary>April 25, 2023</summary>
                     Added IDs 00428, 00429.
                 </details>
                 <details>
