--- a/PNC/unitstats.html
+++ b/PNC/unitstats.html
@@ -63,13 +63,15 @@
                 <div id="button">
                     
                 </div>
+                
                 <div id="stats">
                     <div></div>
                     <p>All units at Lv.70 and 5★.</p>
                     <p>Data taken from <a href="https://nalu.wiki/neuralcloud/c/dolls">nalu.wiki Neural Cloud</a>.</p>
                 </div>
-                <div id="data">
 
+                <div id="data">
+                    <div></div>
                 </div>
             </section>
         </div>
