--- a/GFL/changelog.html
+++ b/GFL/changelog.html
@@ -29,6 +29,11 @@
         <div class="container">
             <section id="main_content">
                 <details>
+                    <summary>April 26, 2023</summary>
+                    Added ID 00430.<br>
+                    Updated IDs 00028, 00166.
+                </details>
+                <details>
                     <summary>April 25, 2023</summary>
                     Added IDs 00428, 00429.
                 </details>
