--- a/PNC/unitstats.html
+++ b/PNC/unitstats.html
@@ -54,6 +54,11 @@
                 linear-gradient(gray 50%, red) !important;
         }
 
+        input[type="checkbox"], input[type="radio"] {
+            appearance: none;
+            margin: 0px;
+        }
+
         #button {
             display: flex;
             flex-wrap: wrap;
