--- a/GFL/changelog.html
+++ b/GFL/changelog.html
@@ -29,6 +29,9 @@
         <div class="container">
             <section id="main_content">
                 <details>
+                    <summary></summary>
+                </details>
+                <details>
                     <summary>April 26, 2023</summary>
                     Added ID 00430.<br>
                     Updated IDs 00028, 00166.
