--- a/GFL/index.html
+++ b/GFL/index.html
@@ -2,30 +2,7 @@
 <html>
     <head>
         <script type="module" src="/univasset/scripts/include/include.js"></script>
-        <script type="module">
-            import {timer} from '/univasset/scripts/htmlgenerator/htmlgenerator.js';
-
-            timer(document.getElementById('event'), "May 22, 2023 23:59 UTC-0800",
-                "https://preview.redd.it/qiyu4iokrkta1.jpg?width=1200&format=pjpg&auto=webp&v=enabled&s=30341a60a2e9a95d049dac9252829efb2916be8e");
-              // https://preview.redd.it/m4cvgxusrkva1.jpg?width=1920&format=pjpg&auto=webp&v=enabled&s=f83f33261004dcf03b1eabb447e5542cdb363926
-            const nextPass = timer.bind(null, document.getElementById('battlepass'), "May 28, 2023 23:59 UTC-0800",
-                "https://preview.redd.it/hlmeolxkdsua1.jpg?width=1920&format=pjpg&auto=webp&v=enabled&s=45047a83105b6a0d0a9e3a1cbb9f72df2d6e30ff");
-            timer(document.getElementById('battlepass'), "Apr 23, 2023 23:59 UTC-0800",
-                "https://pbs.twimg.com/media/FrPXbbwagAMxVqt?format=jpg&name=large", {onEnd: nextPass});
-            
-            const nextUnit = timer.bind(null, document.getElementById("coalition"), "May 01, 2023, 23:59 UTC-0800",
-                "https://preview.redd.it/jajjlqo4cvq81.jpg?width=1400&format=pjpg&auto=webp&v=enabled&s=a2f9a3e65cad03508714bb81aa834ad16f87b843")
-            timer(document.getElementById("coalition"), "Apr 17, 2023, 23:59 UTC-0800",
-                "https://pbs.twimg.com/media/FrUwVIhaUAAfUgl?format=jpg&name=large", {onEnd: nextUnit});
-
-            const nextBanner = timer.bind(null, document.getElementById('skin-banner'), "",
-                "");
-            timer(document.getElementById('skin-banner'), "May 01, 2023 23:59 UTC-0800",
-                "https://iopwiki.com/images/3/37/Wonderful_Dating_Guide_Login_Wallpaper.png", {onEnd: nextBanner});
-
-            //timer(document.getElementById('mini-event'), "",
-            //    "");
-        </script>
+        <script type="module" src="index.js"></script>
         
         <meta charset='utf-8'>
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
