--- a/GFL/changelog.html
+++ b/GFL/changelog.html
@@ -29,7 +29,10 @@
         <div class="container">
             <section id="main_content">
                 <details>
-                    <summary></summary>
+                    <summary>May 03, 2023</summary>
+                    Added IDs 00431, 00432, 00433.<br>
+                    Updated IDs 00070, 00004, 00265.<br>
+                    DummyCore tag added.
                 </details>
                 <details>
                     <summary>April 26, 2023</summary>
