--- a/GFL/starter.html
+++ b/GFL/starter.html
@@ -47,7 +47,7 @@
                     <dd>Major events? Campaign Missions. Banner units? None here. Collabs? Reruns are possible (Note: they're not gamebreaking).</dd>
 
                     <dt>Stamina</dt>
-                    <dd>There is no stamina. But it has an equivalent in Manpower, Ammunition, Ration, and Part resources which can be gathered in bulk indefinitely.</dd>
+                    <dd>There is no stamina. But it has a rough equivalent in Manpower, Ammunition, Ration, and Part resources, which can be gathered in bulk indefinitely.</dd>
 
                     <dt>Storage</dt>
                     <dd>Android ahould be around 5-6GB, iOS is around 10GB.</dd>
@@ -73,6 +73,8 @@
 
                 <a href="#phasing" id="phasing"><h1>I heard they made new games of the same series. Is GFL1 going to be phased out?</h1></a>
                 <p>Not anytime soon considering that 3.0 client (which is a big investment just to shutdown in a year) is made after more than 5 years of its lifespan and the story is nowhere near finished. The plan is for all games to be played simultaneously.</p>
+
+                <!-- Replace with timeline image -->
                 <table>
                     <thead>
                         <tr>
