--- a/GFL/changelog.html
+++ b/GFL/changelog.html
@@ -29,6 +29,12 @@
         <div class="container">
             <section id="main_content">
                 <details>
+                    <summary>May 10, 2023</summary>
+                    Added ID 00433.<br>
+                    Updated IDs 00096, 00433.<br>
+                    Deleted ID 00128.
+                </details>
+                <details>
                     <summary>May 03, 2023</summary>
                     Added IDs 00431, 00432, 00433.<br>
                     Updated IDs 00070, 00004, 00265.<br>
