--- a/GFL/changelog.html
+++ b/GFL/changelog.html
@@ -29,6 +29,10 @@
         <div class="container">
             <section id="main_content">
                 <details>
+                    <summary>May 12, 2023</summary>
+                    Updated IDs 00339, 00096, 00166.
+                </details>
+                <details>
                     <summary>May 10, 2023</summary>
                     Added ID 00433.<br>
                     Updated IDs 00096, 00433.<br>
