--- a/GFL/starter.html
+++ b/GFL/starter.html
@@ -38,12 +38,12 @@
                 <p><em>The best time to plant a tree was twenty years ago. The second best time is now.</em></p>
                 <dl>
                     <dt>Catching up</dt>
-                    <dd>In-game facilities called Forward Basecamp that gives a bevy of items for raising Tactical Dolls (your main fighting force).</dd>
+                    <dd>In-game facility called Forward Basecamp that gives a bevy of items for raising Tactical Dolls (your main fighting force).</dd>
                     <dd>Protocol Assimilation for steamrolling early to mid-game content.</dd>
                     <dd>Newbie Career Quests that gives free preleveled units where some of them, namely AR Team, are meta viable.</dd>
 
                     <dt>Contents</dt>
-                    <dd>The only permanently missable ones are mainly minigame cosmetics only.</dd>
+                    <dd>The only permanently missable ones are mainly minigame cosmetics.</dd>
                     <dd>Major events? Campaign Missions. Banner units? None here. Collabs? Reruns are possible (Note: they're not gamebreaking).</dd>
 
                     <dt>Stamina</dt>
@@ -108,7 +108,6 @@
                 <dl>
                     <dt>Gamepress</dt>
                     <dd><a href="https://gamepress.gg/girlsfrontline/new-player-hub-how-girls-frontline">New Player Hub: How to Girls' Frontline</a></dd>   <!-- Might leave this one only. -->
-                    <dd><a href="https://gamepress.gg/girlsfrontline/girls-frontline-starting-out-part-1">Starting Out</a></dd>
                     <dd><a href="https://gamepress.gg/girlsfrontline/new-player-priorities-maximizing-resource-management-t-doll-production-and-leveling">Doll Acquisition</a></dd>
                     <dd><a href="https://gamepress.gg/girlsfrontline/new-career-quests-and-progression-gem-shop-and-spending-priorities">Spending Priorities</a></dd>
 
