--- a/GFL/changelog.html
+++ b/GFL/changelog.html
@@ -29,6 +29,12 @@
         <div class="container">
             <section id="main_content">
                 <details>
+                    <summary>May 17, 2023</summary>
+                    Added the #difficulty section in the sterter page.<br>
+                    Added IDs 00434, 00436.<br>
+                    Updated ID 00433.
+                </details>
+                <details>
                     <summary>May 12, 2023</summary>
                     Updated IDs 00339, 00096, 00166.
                 </details>
