--- a/GFL/starter.html
+++ b/GFL/starter.html
@@ -71,6 +71,37 @@
                 <p>Very much so to the point that quite a number of them are top rankers in major event rankings. It's more about the breadth of units you have than the power of each individual unit.</p>
                 <p>The only "P2W" is Protocol Assimilation, especially concerning Ringleaders, though it's more of pay to catch-up than anything. It's a major power boost to beginners, a crutch for mid-game players, and an occasional useful tool during end game.</p>
 
+                <a href="#difficulty" id="difficulty"><h1>How is the difficulty in this game?</h1></a>
+                <dl>
+                    <dt>Early game</dt>
+                    <dd>Simple auto-battle</dd>
+                    <dd>Any team is fine</dd>
+                    <dd>Kill enemies, capture command posts</dd>
+                    <dd>Low resources and income, using MGs not recommended</dd>
+                    <dd>Building facilities and core units is high priority</dd>
+
+                    <dt>Mid game</dt>
+                    <dd>Knowledge of class types and simple kiting</dd>
+                    <dd>Proper team formation required</dd>
+                    <dd>Objective completion varies</dd>
+                    <dd>Stable resource income</dd>
+                    <dd>Raising fairies (stat buffs) and HOCs (off-map supports)</dd>
+
+                    <dt>Late game</dt>
+                    <dd>Advanced kiting, target resets, enemy attack delaying</dd>
+                    <dd>Specialized compositions focused on skill synergy</dd>
+                    <dd>Map gimmicks</dd>
+                    <dd>Abundant resources, mostly gets drained on production rate-up</dd>
+                    <dd>Raising specialist dolls (casually if preferred)</dd>
+
+                    <dt>End game</dt>
+                    <dd>Ranking mald with kiting, crit i-frames</dd>
+                    <dd>As long as it works</dd>
+                    <dd>Map control and objectives</dd>
+                    <dd>Resources dwindling by indiscriminate deployment</dd>
+                    <dd>Using duplicates is useful</dd>
+                </dl>
+
                 <a href="#phasing" id="phasing"><h1>I heard they made new games of the same series. Is GFL1 going to be phased out?</h1></a>
                 <p>Not anytime soon considering that 3.0 client (which is a big investment just to shutdown in a year) is made after more than 5 years of its lifespan and the story is nowhere near finished. The plan is for all games to be played simultaneously.</p>
 
