--- a/PNC/unitstats.html
+++ b/PNC/unitstats.html
@@ -99,3 +99,108 @@
         </div>
     </body>
 </html>
+
+<!-- [
+    {
+        "name" : "Nora (X)",
+        "reference" : {"" : ""},
+        "fragments" : ["Fragment Search"],
+        "event" : ""
+    },
+    {
+        "name" : "Millau (X)",
+        "reference" : {"" : ""},
+        "fragments" : ["Fragment Search"],
+        "event" : ""
+    },
+    {
+        "name" : "Zangyin (X)",
+        "reference" : {"" : ""},
+        "fragments" : ["Fragment Search"],
+        "event" : ""
+    },
+    {
+        "name" : "Hannah (X)",
+        "reference" : {"" : ""},
+        "fragments" : ["Fragment Search"],
+        "event" : "Critical Cascade"
+    },
+    {
+        "name" : "Turing (X)",
+        "reference" : {"Alan Turing" : "https://en.wikipedia.org/wiki/Alan_Turing"},
+        "fragments" : ["Fragment Search"],
+        "event" : "Critical Cascade"
+    },
+    {
+        "name" : "Dupin (X)",
+        "reference" : {"C. Auguste Dupin" : "https://en.wikipedia.org/wiki/C._Auguste_Dupin"},
+        "fragments" : ["Fragment Search"],
+        "event" : ""
+    },
+    {
+        "name" : "Clukay (X)",
+        "reference" : {"HK416" : "https://iopwiki.com/wiki/HK416"},
+        "fragments" : [],
+        "event" : "Anniversary"
+    },
+    {
+        "name" : "Undine (X)",
+        "reference" : {"" : ""},
+        "fragments" : ["Fragment Search"],
+        "event" : "Christmas"
+    },
+    {
+        "name" : "Clotho (X)",
+        "reference" : {"" : "King's Raid Jane"},
+        "fragments" : ["Fragment Search"],
+        "event" : "Halloween"
+    },
+    {
+        "name" : "Uranus (X)",
+        "reference" : {"" : ""},
+        "fragments" : ["Fragment Search"],
+        "event" : "Critical Cascade"
+    },
+    {
+        "name" : "Jiangyu (X)",
+        "reference" : {"Type 97" : "https://iopwiki.com/wiki/Type_97"},
+        "fragments" : ["Fragment Search"],
+        "event" : "CNY"
+    },
+    {
+        "name" : "Yelena (X)",
+        "reference" : {"RMB-93" : "https://iopwiki.com/wiki/RMB-93", "": "LoL Twisted Fate"},
+        "fragments" : ["Fragment Search"],
+        "event" : ""
+    },
+    {
+        "name" : "Lind (X)",
+        "reference" : {"" : "AA-12"},
+        "fragments" : [],
+        "event" : ""
+    },
+    {
+        "name" : "Horizon (X)",
+        "reference" : {"" : ""},
+        "fragments" : ["Fragment Search"],
+        "event" : ""
+    },
+    {
+        "name" : "Erika",
+        "reference" : {"" : ""},
+        "fragments" : ["Fragment Search"],
+        "event" : ""
+    },
+    {
+        "name" : "Cascadia",
+        "reference" : {"" : ""},
+        "fragments" : ["Fragment Search"],
+        "event" : ""
+    },
+    {
+        "name" : "Eos",
+        "reference" : {"" : ""},
+        "fragments" : ["Fragment Search"],
+        "event" : ""
+    },
+] -->
