--- a/EXI/index.html
+++ b/EXI/index.html
@@ -24,7 +24,7 @@
     </head>
 
     <body>
-        <include src="/univasset/scripts/pageheader/header.html">"Upcoming game: Exillium"</include>
+        <include src="/univasset/scripts/pageheader/header.html">"Upcoming game: Exilium"</include>
 
         <div class="container">
             <section id="main_content">
