--- a/GFL/changelog.html
+++ b/GFL/changelog.html
@@ -29,8 +29,12 @@
         <div class="container">
             <section id="main_content">
                 <details>
+                    <summary>May 27, 2023</summary>
+                    Updated IDs 00200, 00265, 00026, 00001.
+                </details>
+                <details>
                     <summary>May 17, 2023</summary>
-                    Added the #difficulty section in the sterter page.<br>
+                    Added the #difficulty section in the starter page.<br>
                     Added IDs 00434, 00436.<br>
                     Updated ID 00433.
                 </details>
