--- a/GFL/starter.html
+++ b/GFL/starter.html
@@ -51,6 +51,9 @@
 
                     <dt>Storage</dt>
                     <dd>Android ahould be around 5-6GB, iOS is around 10GB.</dd>
+
+                    <dt>Longetivity</dt>
+                    <dd>This game will only ever end once they've told all the stories they want to tell. Which is still a lot as of now.</dd>
                 </dl>
 
                 <a href="#pvp" id="pvp"><h1>Is there PVP in this game?</h1></a>
