--- a/PNC/unitstats.html
+++ b/PNC/unitstats.html
@@ -82,18 +82,17 @@
 
         <div class="container">
             <section id="main_content">
-                <div id="button">
-                    
-                </div>
+                <div id="button"></div>
                 
                 <div id="stats">
                     <div></div>
                     <p>All units at Lv.70 and 5★.</p>
-                    <p>Data taken from <a href="https://nalu.wiki/neuralcloud/c/dolls">nalu.wiki Neural Cloud</a>.</p>
+                    <p>Data taken from <a href="https://nalu.wiki/neuralcloud/c/dolls">nalu.wiki Neural Cloud</a> and <a href="http://wiki.42lab.cloud/w/%E5%BF%83%E6%99%BA%E4%BA%BA%E5%BD%A2%E5%9B%BE%E9%89%B4">42 wiki</a>.</p>
                 </div>
 
                 <div id="data">
                     <div></div>
+                    <p>Neural fragments available in Basic Search is limited to day 0 units.</p>
                 </div>
             </section>
         </div>
