--- a/GFL/changelog.html
+++ b/GFL/changelog.html
@@ -29,6 +29,11 @@
         <div class="container">
             <section id="main_content">
                 <details>
+                    <summary>May 31, 2023</summary>
+                    Added IDs 00437, 00438, 00439.
+                    Updated IDs 00032, 00173, 00169, 00023.
+                </details>
+                <details>
                     <summary>May 27, 2023</summary>
                     Updated IDs 00200, 00265, 00026, 00001.
                 </details>
