--- a/GFL/changelog.html
+++ b/GFL/changelog.html
@@ -30,7 +30,7 @@
             <section id="main_content">
                 <details>
                     <summary>May 31, 2023</summary>
-                    Added IDs 00437, 00438, 00439.
+                    Added IDs 00437, 00438, 00439.<br>
                     Updated IDs 00032, 00173, 00169, 00023.
                 </details>
                 <details>
