--- a/GFL/changelog.html
+++ b/GFL/changelog.html
@@ -29,6 +29,9 @@
         <div class="container">
             <section id="main_content">
                 <details>
+                    <summary></summary>
+                </details>
+                <details>
                     <summary>May 31, 2023</summary>
                     Added IDs 00437, 00438, 00439.<br>
                     Updated IDs 00032, 00173, 00169, 00023.
