--- a/PNC/index.html
+++ b/PNC/index.html
@@ -28,7 +28,7 @@
 
         <div class="container">
             <section id="main_content">
-                <p><a href="./unitstats">Unit Stats</a></p>
+                <p><a href="./units">Unit Stats</a></p>
                 <p><a href="./googledocs">Guides</a></p>
             </section>
         </div>
