--- a/GFL/changelog.html
+++ b/GFL/changelog.html
@@ -29,7 +29,9 @@
         <div class="container">
             <section id="main_content">
                 <details>
-                    <summary></summary>
+                    <summary>June 07, 2023</summary>
+                    Added ID 00440.<br>
+                    Updated IDs 00070, 00265.
                 </details>
                 <details>
                     <summary>May 31, 2023</summary>
