--- a/test.html
+++ b/test.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <script type="module" src="/univasset/scripts/include/include.js"></script>
+        <script type="module" src="/univasset/scripts/include/trial.js"></script>
 
         <meta charset='utf-8'>
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -24,7 +24,7 @@
     </head>
 
     <body>
-        <include src="/univasset/scripts/pageheader/header.html">"Live Test Page"</include>
+        <include src="/univasset/scripts/pageheader/header.html" 0="Live Test Page" />
 
         <div class="container">
             <section id="main_content">
@@ -32,6 +32,8 @@
                 <span></span>
             </section>
         </div>
+
+        <include src="/univasset/scripts/copyright/copyright.html" game="asdf" company="lmao" />
 
         <script type="module">
             /* Working
