--- a/univasset/scripts/copyright/copyright.html
+++ b/univasset/scripts/copyright/copyright.html
@@ -1,9 +1,6 @@
 <!--
-    0: Game name
-    1: Company name
+    game: Game name
+    company: Company name
 -->
 
-<p>
-    <include key="0"></include>
-    <include key="1"></include>
-</p>
+<p>This game called <include key="game" /> is from <include key="company" />.</p>
