--- a/univasset/scripts/copyright/copyright.html
+++ b/univasset/scripts/copyright/copyright.html
@@ -3,4 +3,4 @@
     company: Company name
 -->
 
-<p>This game called <include key="game" /> is from <include key="company" />.</p>
+<p>This game called <include key="game"></include> is from <include key="company"></include>.</p>
