--- a/test.html
+++ b/test.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <script type="module" src="/univasset/scripts/include/trial.js"></script>
+        <script type="module" src="/univasset/scripts/include.js"></script>
 
         <meta charset='utf-8'>
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -24,16 +24,16 @@
     </head>
 
     <body>
-        <include src="/univasset/scripts/pageheader/header.html" 0="Live Test Page" />
+        <include src="/univasset/scripts/pageheader/header.html" 0="Live Test Page"></include>
 
         <div class="container">
             <section id="main_content">
                 <div></div>
                 <span></span>
-                <include src="/univasset/scripts/copyright/copyright.html" game="asdf" company="lmao" />
             </section>
         </div>
 
+        <include src="/univasset/scripts/copyright/copyright.html" game="asdf" company="lmao"></include>
 
         <script type="module">
             /* Working
