--- a/PNC/googledocs.html
+++ b/PNC/googledocs.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <script type="module" src="/univasset/scripts/include/include.js"></script>
+        <script type="module" src="/univasset/scripts/include.js"></script>
         <script type="module">
             import {gdocDropdown} from '/univasset/scripts/htmlgenerator/htmlgenerator.js';
 
@@ -15,6 +15,7 @@
                 ["u/Zugon's PNC Item Rates", "https://docs.google.com/spreadsheets/d/1guDb_49x6g7I84Na2SP5BAB5SMFXubR41r0dhXHyGZQ"],
                 ['PNC Algorithm Sheet', 'https://docs.google.com/spreadsheets/d/1qP8rHMCwBqgxBdnf-qEVZRo3yXY2f4Ohju7GRmu7lNw'],
                 ["Neural Cloud Gifts", "https://docs.google.com/spreadsheets/d/1vohWGNxRO0kXSBxAGlVBezleV2YgxnCHY2yE_4scdTc"],
+                ["Lozzy Tier List", "https://docs.google.com/spreadsheets/d/1e_fEucLAZj8zi8ohELL2G2Q4ddZ_vvmGJqH87jQ2pwM"],
                 ['Algorithms', 'https://docs.google.com/spreadsheets/d/1eNVCADDvoelcOFeag4BxIouw1Na8KwxZjRD_rbBJdEU'],
             )
         </script>
@@ -40,7 +41,7 @@
     </head>
 
     <body>
-        <include src="/univasset/scripts/pageheader/header.html">"Google Sheets made by guidemakers for PNC"</include>
+        <include src="/univasset/scripts/pageheader/header.html" 0="Google Sheets made by guidemakers for PNC"></include>
 
         <div class="container">
             <section id="main_content">
