--- a/GFL/changelog.html
+++ b/GFL/changelog.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <script type="module" src="/univasset/scripts/include/include.js"></script>
+        <script type="module" src="/univasset/scripts/include.js"></script>
         
         <meta charset='utf-8'>
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -24,7 +24,7 @@
     </head>
 
     <body>
-        <include src="/univasset/scripts/pageheader/header.html">"For those who want to reminisce on the has-beens"</include>
+        <include src="/univasset/scripts/pageheader/header.html" 0="For those who want to reminisce on the has-beens"></include>
 
         <div class="container">
             <section id="main_content">
