--- a/GFL/docs.html
+++ b/GFL/docs.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <script type="module" src="/univasset/scripts/include/include.js"></script>
+        <script type="module" src="/univasset/scripts/include.js"></script>
         <script type="module">
             import {gdocDropdown} from '/univasset/scripts/htmlgenerator/htmlgenerator.js';
 
@@ -37,7 +37,7 @@
     </head>
 
     <body>
-        <include src="/univasset/scripts/pageheader/header.html">"Google Sheets made by guidemakers for PNC"</include>
+        <include src="/univasset/scripts/pageheader/header.html" 0="Google Sheets made by guidemakers for GFL"></include>
 
         <div class="container">
             <section id="main_content">
