--- a/GFL/elites.html
+++ b/GFL/elites.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <script type="module" src="/univasset/scripts/include/include.js"></script>
+        <script type="module" src="/univasset/scripts/include.js"></script>
         <script type="module">
             import {Async} from '/univasset/scripts/externaljavascript.js';
             import {table} from '/univasset/scripts/htmlgenerator/htmlgenerator.js';
-            import {zip} from '/univasset/scripts/basefunctions/index.js';
+            import {zip, count} from '/univasset/scripts/basefunctions/index.js';
 
             const jsonObject = await Async.getJSON('https://raw.githubusercontent.com/randomqwerty/GFLData/main/en/stc/enemy_character_type.json');
             const matrix = [['No', 'Elites', 'Non-Elites']];
             var elite = new Set(), nonelite = new Set();
 
             for (const {passive_skill, code} of jsonObject) (String(passive_skill).includes('200304') ? nonelite : elite).add(code);
-            for (const [index, [unitE, unitNE]] of Object.entries(Array.from(zip(elite, nonelite, true)))) matrix.push([Number(index) + 1, unitE, unitNE ?? '']);
+            for (const [index, unitE, unitNE] of zip(count(1), elite, nonelite, true)) matrix.push([index, unitE, unitNE ?? '']);
 
             table(document.querySelector('#main_content div'), matrix);
         </script>
@@ -38,7 +38,7 @@
     </head>
 
     <body>
-        <include src="/univasset/scripts/pageheader/header.html">"List of Elite and Non-elite Units"</include>
+        <include src="/univasset/scripts/pageheader/header.html" 0="List of Elite and Non-elite Units"></include>
 
         <div class="container">
             <section id="main_content">
