--- a/GFL/faqs.html
+++ b/GFL/faqs.html
@@ -11,7 +11,7 @@
         <!-- Some GDoc fails to load and reloading it blanks the whole page. -->
         <!-- script defer type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/lodash.js/0.10.0/lodash.min.js"></script -->
         <script defer src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-        <script type="module" src="/univasset/scripts/include/include.js"></script>
+        <script type="module" src="/univasset/scripts/include.js"></script>
         <script type="module" src="./faqs.js"></script>
         
         <meta charset='utf-8'>
@@ -35,7 +35,7 @@
     </head>
 
     <body>
-        <include src="/univasset/scripts/pageheader/header.html">"Girls' Frontline Reddit Lounge FAQs"</include>
+        <include src="/univasset/scripts/pageheader/header.html" 0="Girls' Frontline Reddit Lounge FAQs"></include>
 
         <div class="container">
             <section id="main_content">
