--- a/GFL/index.html
+++ b/GFL/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <script type="module" src="/univasset/scripts/include/include.js"></script>
+        <script type="module" src="/univasset/scripts/include.js"></script>
         <script type="module" src="index.js"></script>
         
         <meta charset='utf-8'>
@@ -25,7 +25,7 @@
     </head>
 
     <body>
-        <include src="/univasset/scripts/pageheader/header.html">"GFL Main Page and Event Timer"</include>
+        <include src="/univasset/scripts/pageheader/header.html" 0="GFL Main Page and Event Timer"></include>
 
         <div class="container">
             <section id="main_content">
