--- a/GFL/starter.html
+++ b/GFL/starter.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <script type="module" src="/univasset/scripts/include/include.js"></script>
+        <script type="module" src="/univasset/scripts/include.js"></script>
 
         <meta charset='utf-8'>
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -30,7 +30,7 @@
     </style>
 
     <body>
-        <include src="/univasset/scripts/pageheader/header.html">"Newbie Starter Guide"</include>
+        <include src="/univasset/scripts/pageheader/header.html" 0="Newbie Starter Guide"></include>
 
         <div class="container">
             <section id="main_content">
