--- a/PNC/units.html
+++ b/PNC/units.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <script type="module" src="/univasset/scripts/include/include.js"></script>
+        <script type="module" src="/univasset/scripts/include.js"></script>
         <script type="module" src="./units.js"></script>
 
         <meta charset='utf-8'>
@@ -25,7 +25,7 @@
     </head>
 
     <body>
-        <include src="/univasset/scripts/pageheader/header.html">"Unit stat table"</include>
+        <include src="/univasset/scripts/pageheader/header.html" 0="Unit stat table"></include>
 
         <div class="container">
             <section id="main_content">
