--- a/GFL/elites.html
+++ b/GFL/elites.html
@@ -5,14 +5,14 @@
         <script type="module">
             import {Async} from '/univasset/scripts/externaljavascript.js';
             import {table} from '/univasset/scripts/htmlgenerator/htmlgenerator.js';
-            import {zip, count} from '/univasset/scripts/basefunctions/index.js';
+            import {zip, range} from '/univasset/scripts/basefunctions/index.js';
 
             const jsonObject = await Async.getJSON('https://raw.githubusercontent.com/randomqwerty/GFLData/main/en/stc/enemy_character_type.json');
             const matrix = [['No', 'Elites', 'Non-Elites']];
             var elite = new Set(), nonelite = new Set();
 
             for (const {passive_skill, code} of jsonObject) (String(passive_skill).includes('200304') ? nonelite : elite).add(code);
-            for (const [index, unitE, unitNE] of zip(count(1), elite, nonelite, true)) matrix.push([index, unitE, unitNE ?? '']);
+            for (const [index, [unitE, unitNE]] of zip(range(null, 1), zip(elite, nonelite, true))) matrix.push([index, unitE, unitNE ?? '']);
 
             table(document.querySelector('#main_content div'), matrix);
         </script>
