--- a/PNC/units.html
+++ b/PNC/units.html
@@ -36,20 +36,19 @@
                     <p>All units at Lv.70 and 5★. Arma stats at Lv.30.</p>
                     <p>Data taken from <a href="https://nalu.wiki/neuralcloud/c/dolls">nalu wiki</a> and <a href="http://wiki.42lab.cloud/w/%E5%BF%83%E6%99%BA%E4%BA%BA%E5%BD%A2%E5%9B%BE%E9%89%B4">42 wiki</a>.</p>
                     <p>Default stats for all units:</p>
-                    <table>
-                        <tr><td>Crit Damage</td>        <td>50%</td></tr>
-                        <tr><td>Skill Haste</td>        <td>0%</td></tr>
-                        <tr><td>Debuff RES</td>         <td>0</td></tr>
-                        <tr><td>Backlash</td>           <td>0%</td></tr>
-                        <tr><td>Damage Boost</td>       <td>0%</td></tr>
-                        <tr><td>Injury Mitigation</td>  <td>0%</td></tr>
-                        <tr><td>Healing Effect</td>     <td>0%</td></tr>
-                    </table>
+                    <div id="common">
+                        <span>Crit Damage</span>        <span>50%</span>
+                        <span>Skill Haste</span>        <span>0%</span>
+                        <span>Debuff RES</span>         <span>0</span>
+                        <span>Backlash</span>           <span>0%</span>
+                        <span>Damage Boost</span>       <span>0%</span>
+                        <span>Injury Mitigation</span>  <span>0%</span>
+                        <span>Healing Effect</span>     <span>0%</span>
+                    </div>
                 </div>
 
                 <div id="data">
                     <div></div>
-                    <p>Neural fragments available in Basic Search is limited to day 0 units.</p>
                 </div>
             </section>
         </div>
@@ -152,5 +151,10 @@
         "reference" : {"" : ""},
         "fragments" : ["Fragment Search"],
         "event" : ""
+    },
+        {
+        "name" : "Taisch",
+        "reference" : {"" : ""},
+        "fragments" : ["Fragment Search"]
     },
 ] -->
