--- a/GFL/index.html
+++ b/GFL/index.html
@@ -25,7 +25,7 @@
     </head>
 
     <style>
-        #id {
+        #links {
             display: grid;
             grid-template-columns: repeat(3, 1fr);
         }
