--- a/GFL/index.html
+++ b/GFL/index.html
@@ -28,6 +28,12 @@
         #links {
             display: grid;
             grid-template-columns: repeat(3, 1fr);
+            text-align: center;
+            place-items: center;
+        }
+
+        #links > * {
+            margin: 5px 0px;
         }
     </style>
 
