--- a/GFL/changelog.html
+++ b/GFL/changelog.html
@@ -29,8 +29,12 @@
         <div class="container">
             <section id="main_content">
                 <details>
+                    <summary>June 21, 2023</summary>
+                    Added ID 00443.
+                </details>
+                <details>
                     <summary>June 15, 2023</summary>
-                    Added ID 00441, 00442.<br>
+                    Added IDs 00441, 00442.<br>
                     Updated ID 00430.<br>
                     Changed ID 00060.
                 </details>
