--- a/GFL/starter.html
+++ b/GFL/starter.html
@@ -142,7 +142,7 @@
                 <dl>
                     <dt>Gamepress</dt>
                     <dd><a href="https://gamepress.gg/girlsfrontline/new-player-hub-how-girls-frontline">New Player Hub: How to Girls' Frontline</a></dd>   <!-- Might leave this one only. -->
-                    <dd><a href="https://gamepress.gg/girlsfrontline/new-player-priorities-maximizing-resource-management-t-doll-production-and-leveling">Doll Acquisition</a></dd>
+                    <dd><a href="https://gamepress.gg/girlsfrontline/new-player-priorities-maximizing-resource-management-t-doll-production-and-leveling">New Player Priorities: Maximizing Resource Management, T-Doll Production, and Leveling</a></dd>
                     <dd><a href="https://gamepress.gg/girlsfrontline/new-career-quests-and-progression-gem-shop-and-spending-priorities">Spending Priorities</a></dd>
 
                     <dt>GFL Corner</dt>
@@ -163,7 +163,8 @@
                     <dd><a href="https://docs.google.com/document/d/1ixj8_H7bB5YELD276NaG8_A_ElOMYS95RfjdM3fUaVc">2.09 Starter Guide</a></dd>
                     <dd><a href="https://redd.it/vx8kod">June Tierlist (Isomer+) finalized by u/BichirMemoriam</a></dd>
 
-                    <dt><a href="https://docs.google.com/document/d/1TZ5FQO6CvGTw8-XJ9_J4l0yNlHGx5ZlPBmth4NzlbdA">Yuko #1428</a></dt>
+                    <dt>Yuko #1428</dt>
+                    <dd><a href="https://docs.google.com/document/d/1TZ5FQO6CvGTw8-XJ9_J4l0yNlHGx5ZlPBmth4NzlbdA"><del>Beginner's</del> Guide to Girls' Frontline</a></dd>
 
                     <dt><a href="https://docs.google.com/document/u/0/d/1MKtHCtY08wlyIZPLvHUa88oaWQzaKvVSxa0gEFZFMiY">u/ShuviSchwarze</a></dt>
 
