--- a/GFL/index.html
+++ b/GFL/index.html
@@ -8,6 +8,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="/univasset/scripts/externalcss.css">
+        <link rel="stylesheet" href="index.css">
         
         <!-- Setup theme-color -->
 
@@ -23,19 +24,6 @@
 
         <title>GFL Main Page | Random Scraps</title>
     </head>
-
-    <style>
-        #links {
-            display: grid;
-            grid-template-columns: repeat(3, 1fr);
-            text-align: center;
-            place-items: center;
-        }
-
-        #links > * {
-            margin: 5px 0px;
-        }
-    </style>
 
     <body>
         <include src="/univasset/scripts/pageheader/header.html" 0="GFL Main Page and Event Timer"></include>
