--- a/GFL/faqs.html
+++ b/GFL/faqs.html
@@ -50,11 +50,11 @@
                 </form>
 
                 <div id="browse-page">
-                    <button type="button" onclick="changePage(this)" value="first">First</button>
-                    <button type="button" onclick="changePage(this)" value="previous">Prev</button>
+                    <button type="button" value="first">First</button>
+                    <button type="button" value="previous">Prev</button>
                     <span id="page-no">0</span>/<span id="maxpage"></span>
-                    <button type="button" onclick="changePage(this)" value="next">Next</button>
-                    <button type="button" onclick="changePage(this)" value="last">Last</button>
+                    <button type="button" value="next">Next</button>
+                    <button type="button" value="last">Last</button>
                 </div>
                 <!-- #endregion -->
 
